test/TestPhases/namecheck/valid/implicitmember1.blc
import E "../imports/enum" exposes Color
module

enum RGB
    Red
    Green
    Blue
end

function f ()
    var tl: Color = Color.Green
    var rgb: RGB = Green // typing does not help, no overloading resolution in Blech
end